# jsonschematomappings

./: .flake8  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
jsonschematomappings/: __init__.py
requirements/: requirements-test.txt  requirements.txt
tests/: conftest.py  test_jsonschematomappings.py
tests/resources/: test_json_schema.json  test_json_schema_mappings.json
