[project]
name = "jsonschematomappings"
version = "0.0.2"
authors = [
  { name="William McLaren" },
]
description = "Converts JSON schema to OpenSearch/ElasticSearch mappings"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/willmclaren/jsonschematomappings"
"Bug Tracker" = "https://github.com/willmclaren/jsonschematomappings/issues"

[project.scripts]
jsonschematomappings = "jsonschematomappings:main"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8

[[tool.mypy.overrides]]
module = [
    'fastjsonschema',
    'deepdiff',
    'pytest',
    'setuptools',
]
ignore_missing_imports = true
